--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,17 +44,26 @@ android {
             applicationIdSuffix '.free'
         }
     }
+
+    configurations.all {
+        resolutionStrategy.force 'com.android.support:appcompat-v7:27.1.1'
+        resolutionStrategy.force 'com.android.support:support-v4:27.1.1'
+    }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    endpointsServer project(path: ':backend', configuration: 'endpoints')
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    freeImplementation 'com.google.android.gms:play-services-ads:15.0.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.http-client:google-http-client-android:1.23.0'
     implementation 'com.google.code.findbugs:jsr305:3.0.1'
+    implementation project(":androidjokeui")
+
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     testImplementation 'junit:junit:4.12'
-    implementation project(":androidjokeui")
+
+    freeImplementation 'com.google.android.gms:play-services-ads:15.0.1'
+
+    endpointsServer project(path: ':backend', configuration: 'endpoints')
 }
